add tab function

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "SimpleMemo",
-  "version": "0.1.1",
+  "name": "SimpleMemoPad",
+  "version": "0.2.0",
   "manifest_version": 3,
   "description": "シンプルなメモ帳",
   "icons": {
