--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "SimpleMemoPad",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "manifest_version": 3,
-  "description": "It is the best app for leaving a little memo when operating the browser.",
+  "description": "This app is a simple memo pad.",
   "icons": {
     "16": "img/icon/16.png",
     "48": "img/icon/48.png",
