--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "SimpleMemoPad",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "manifest_version": 3,
   "description": "This app is a simple memo pad.",
   "icons": {
@@ -19,8 +19,8 @@
   "commands": {
     "_execute_action": {
         "suggested_key": {
-            "default": "Ctrl+Shift+Z",
-            "mac": "MacCtrl+Shift+Z"
+            "default": "Ctrl+Shift+X",
+            "mac": "Command+Shift+X"
         }
     }
   },
